Fixed alignment when page is shrunk

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 /* Part of header > Top links */
 .header-links {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 75px;
@@ -50,13 +51,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    justify-content:space-around;
+    flex-wrap: wrap;
+ 
     margin-bottom: 100px;
 }
 
 .hero .left {
     display: flex;
     flex-direction: column;
+    max-width: 450px;
 }
 .hero-title {
     font-size: 48px;
@@ -83,7 +87,6 @@ body {
 
 .hero .right {
     flex-shrink: 0;
-    width: 50%;
 }
 
 .hero .right img {
@@ -181,6 +184,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     padding-top: 25px;
     padding-bottom: 25px;
 }
